--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap');
+
 body {
-    font-family: Calibri,Helvetica,Arial,sans-serif !important;
+    font-family: 'Open Sans',Helvetica,Arial,sans-serif !important;
+    font-size: 18px;
 }
 
+/* text */
+
 h1 {
-    font-size: 36px !important;
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px !important;
+    font-weight: 700;
+    text-align: center;
+    color: #0a2240;
 }
 
 h2 {
@@ -14,23 +23,49 @@ h3 {
     font-size: 25px;
 }
 
+.muted-text {
+    text-align: center;
+    font-size: 14px;
+    color: #b7b7bf;
+    margin-bottom: 0px;
+}
+
+.intro-text {
+    text-align: center;
+    color: #506175;
+    font-size: 20px;
+}
+
+.password-text {
+    font-size: 28px;
+    color: #506175;
+    margin: 0px;
+}
+
+.settings-title {
+    font-size: 28px;
+    color: #b0b7cd;
+    margin-bottom: 26px;
+    border-bottom: 2px solid #f5f7f8;
+    padding-bottom: 10px;
+}
+
+/* blocks */
+
 .main {
-    background-image: linear-gradient(to right, #265e7f , #3c9bba);
-    color: #fff;
+    background-color: #f9fbfd;
     padding: 50px 10px 40px;
 }
 
 .medium-container {
-    width: 960px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.black-container {
-    background-color: #191919;
-    height: 55vh;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,.15);
+    box-shadow: 0 2px 8px rgba(0,0,0,.15);
+    max-width: 800px;
+    margin: 40px auto 15px auto;
+    padding: 30px 40px;
 }
 
 .blue-container {
@@ -38,18 +73,26 @@ h3 {
     display: block;
     font-size: 21px;
     text-align: center;
-    color: #fff;
     padding: 20px 0;
+    height: calc(100vh - 505px);
 }
 
 .green-container {
     background-image: linear-gradient(to right, #0f3312 , #2d7c30);
     display: block;
+    font-size: 21px;
+    text-align: center;
+    padding: 20px 0;
+    height: calc(100vh - 505px);
 }
 
 .red-container {
     background-image: linear-gradient(to right, #341010 , #9d3838);
     display: block;
+    font-size: 21px;
+    text-align: center;
+    padding: 20px 0;
+    height: calc(100vh - 505px);
 }
 
 .title-block {
@@ -61,6 +104,7 @@ h3 {
 .navbar {
     height: 90px !important;
     background-image: linear-gradient(to right, #080e1a , #1c4650);
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.5);
 }
 
 .form-control {
@@ -68,19 +112,66 @@ h3 {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     font-size: 2em;
-    border: none;
-    font-size: 29px;
+    border: 1px solid #c8c8c8;;
+    font-size: 22px;
+    box-shadow: inset 0 1px 2px 0 rgba(0,0,0,.25);
 }
 
+.modal-content {
+    border: 0 !important;
+}
+
+.modal-header {
+    text-align: center !important;
+    background-color: #007bff;
+    border: 0;
+}
+
+.modal-title {
+    color: #fff;
+}
+
+.modal-body {
+    padding: 5px;
+}
+
+.close {
+    color: #fff;
+}
+
+.close:hover {
+    color: #cfdbe6;
+}
+
+/* buttons */
+
 #button-addon2 {
-    font-size: 29px;
+    font-size: 22px;
     height: 60px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    border: 1px solid #fff!important;
     background-color: #2b5766;
 }
 
 #button-addon2:hover {
     background-color: #343a40;
+}
+
+.btn {
+    border-radius: 50px;
+    padding: 14px 34px;
+    font-size: 20px;
+    box-shadow: 0 1px 6px 0 rgba(0,0,0,.1), 0 1px 1px 0 rgba(0,0,0,.2);
+}
+
+.btn-password {
+    margin-top: 16px;
+}
+
+.custom-switch {
+    margin-bottom: 15px;
+}
+
+#copy-icon {
+    cursor: pointer;
 }
