--- a/templates/index.html
+++ b/templates/index.html
@@ -1,99 +1,51 @@
+{% extends 'base.html' %}
+
 {% load static %}
-<!doctype html>
-<html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{% block content %}
+    <div class="main">
+        <div class="medium-container">
+            <h1>Check your password</h1>
+            <p class="intro-text">Enter your password below to check if it has previously been exposed in data breaches.</p>
+            <form action="{% url 'password_check' %}" method="post">
+                {% csrf_token %}
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control" placeholder="password" aria-describedby="button-addon2" name="password" required>
+                    <div class="input-group-append">
+                        <button class="btn btn-info" type="submit" id="button-addon2">Check My Pass</button>
+                    </div>
+                    </div>
+            </form>
+        </div>
+    </div>
 
-        <!-- Local CSS -->
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
-        <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/0193bc8668.js" crossorigin="anonymous"></script>
-
-        <title>Check My Pass</title>
-    </head>
-    <body>
-        <!-- Image and text -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'index' %}"><i class="fas fa-lock"></i>&nbsp;&nbsp;Check My Pass</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'index' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Password Generator</a>
-                        </li>
-                    </ul>
+    {% if messages %}
+        {% for message in messages %}
+            {% if 'was NOT found :)' in message.message %}
+                <div class="green-container">
+                    <div class="medium-container">
+                        <h2>Good news 🤩</h2>
+                        <h3>{{ message }}</h3>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <div class="main">
-            <div class="medium-container">
-                <h1>Check your password</h1>
-                <p>Enter your password below to check if it has previously been exposed in data breaches.</p>
-                <form action="{% url 'password_check' %}" method="post">
-                    {% csrf_token %}
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="password" aria-describedby="button-addon2" name="password">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="submit" id="button-addon2">Check My Pass</button>
-                        </div>
-                      </div>
-                </form>
-            </div>
-        </div>
-
-        {% if messages %}
-            {% for message in messages %}
-                {% if 'was NOT found :)' in message.message %}
-                    <div class="green-container">
-                        <div class="medium-container">
-                            <div class="title-block">
-                                <h2>Good news...</h2>
-                                <h3>{{ message }}</h3>
-                            </div>
-                        </div>
+            {% else %}
+                <div class="red-container">
+                    <div class="medium-container">
+                        <h2>Oh no 😭</h2>
+                        <h3>{{ message }}</h3>
                     </div>
-                {% else %}
-                    <div class="red-container">
-                        <div class="medium-container">
-                            <div class="title-block">
-                                <h2>Oh no...</h2>
-                                <h3>{{ message }}</h3>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        {% else %}
-        <div class="blue-container">
-            <div class="medium-container">
-                <p class="mt-3">
-                    <img src="{% static 'img/1PasswordLogo.svg' %}" alt="" class="mr-3">
-                    <span>Generate secure, unique passwords for every account</span>
-                    <a href="#" class="btn btn-primary btn-sm ml-3">Create password</a>
-                </p>
-            </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% else %}
+    <div class="blue-container">
+        <div class="medium-container">
+            <p class="mt-3">
+                <img src="{% static 'img/1PasswordLogo.svg' %}" alt="" class="mr-3">
+                <span>Generate secure, unique passwords for every account</span>
+                <a href="{% url 'password_generator' %}" class="btn btn-primary btn-sm ml-3">Create password</a>
+            </p>
         </div>
-        {% endif %}
-        <div class="black-container">
-
-        </div>
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>
-</html>
+    </div>
+    {% endif %}
+{% endblock %}
