Small addition to html

--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -45,7 +45,7 @@
         </div>
         <div class="medium-container">
           {% if password %}
-            <p class="password-text"><i class="far fa-copy" id="copy-icon" data-toggle="modal" data-target="#exampleModal"></i>&nbsp;<span id="password-span">{{ password }}</span></p>
+            <p class="password-text"><i title="Copy" class="far fa-copy" id="copy-icon" data-toggle="modal" data-target="#exampleModal"></i>&nbsp;<span id="password-span">{{ password }}</span></p>
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
