Small tweaks to CSS

--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -57,7 +57,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <img src="https://source.unsplash.com/490x323/?nature,water" alt="">
+                            <img src="https://cdn.pixabay.com/photo/2015/09/04/23/28/wordpress-923188_960_720.jpg" alt="">
                         </div>
                     </div>
                 </div>
