--- a/static/css/main.css
+++ b/static/css/main.css
@@ -119,12 +119,17 @@ h3 {
 
 .modal-content {
     border: 0 !important;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 2px 8px rgba(0,0,0,.15);
+    box-shadow: 0 2px 8px rgba(0,0,0,.15);
 }
 
 .modal-header {
     text-align: center !important;
     background-color: #007bff;
     border: 0;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 .modal-title {
@@ -132,7 +137,18 @@ h3 {
 }
 
 .modal-body {
-    padding: 5px;
+    height: 300px;
+}
+
+.modal-body img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .close {
